[gd_scene load_steps=45 format=3 uid="uid://dfk3xs1oufwne"]

[ext_resource type="Script" path="res://MainSceneCode.gd" id="1_gnvie"]
[ext_resource type="Shader" path="res://VideoEffect.gdshader" id="1_ln5qv"]
[ext_resource type="Shader" path="res://GlithcEffect.gdshader" id="2_mdce0"]
[ext_resource type="Script" path="res://player.gd" id="2_tx5s3"]
[ext_resource type="Script" path="res://monster_maneger.gd" id="3_j0cqo"]
[ext_resource type="Texture2D" uid="uid://cd2bllsuhajjh" path="res://hammer-swing1.png" id="3_vac3q"]
[ext_resource type="Texture2D" uid="uid://bfbaygtkewl11" path="res://eyes4.png" id="4_awa1b"]
[ext_resource type="Texture2D" uid="uid://bg0ecbvtcpn6m" path="res://hammer-swing2.png" id="4_pdfnv"]
[ext_resource type="Script" path="res://front.gd" id="4_wi2lc"]
[ext_resource type="Texture2D" uid="uid://b0j0nps41kp07" path="res://hammer-swing3.png" id="5_bhxsg"]
[ext_resource type="Script" path="res://middle.gd" id="5_y1adk"]
[ext_resource type="Texture2D" uid="uid://b6mbblfld07oj" path="res://hammer-swing4.png" id="6_02v3h"]
[ext_resource type="Script" path="res://end.gd" id="6_8pign"]
[ext_resource type="Texture2D" uid="uid://bett2j64xy441" path="res://mouth-stage1.png" id="6_t7q0d"]
[ext_resource type="Texture2D" uid="uid://dgkgnehjth7bd" path="res://hammer-swing5.png" id="7_f7jwk"]
[ext_resource type="Texture2D" uid="uid://wmh4juxamptb" path="res://mouth-stage2.png" id="8_2ckfu"]
[ext_resource type="Texture2D" uid="uid://cpnxauddn88in" path="res://hammer-swing6.png" id="8_3hmq7"]
[ext_resource type="Texture2D" uid="uid://ba2jgucfnrvpp" path="res://mouth-stage3.png" id="9_2cjnu"]
[ext_resource type="Texture2D" uid="uid://bkdsqtcicmpu3" path="res://eyeleft.png" id="9_nbxwf"]
[ext_resource type="Texture2D" uid="uid://b6hw3gsaw30yy" path="res://hammer-swing7.png" id="9_ryr52"]
[ext_resource type="Texture2D" uid="uid://cpvi46coywrfb" path="res://mouth-stage4.png" id="10_50alp"]
[ext_resource type="Texture2D" uid="uid://dgy7frltkgao7" path="res://eyemid.png" id="10_sd7ph"]
[ext_resource type="Texture2D" uid="uid://bs4mrmq2kao1c" path="res://mouth-stage5.png" id="11_00ta4"]
[ext_resource type="Texture2D" uid="uid://mj71ea7oky5" path="res://eyeright.png" id="11_h2d60"]
[ext_resource type="Texture2D" uid="uid://bqvpb1bogexvj" path="res://arms5.png" id="12_pe6gb"]
[ext_resource type="Texture2D" uid="uid://b5va6q81stvei" path="res://arms1.png" id="14_tvslc"]
[ext_resource type="Texture2D" uid="uid://docex50qjt5ju" path="res://arms2.png" id="15_q4t5l"]
[ext_resource type="Texture2D" uid="uid://d0c2u7ujqlqsn" path="res://arms3.png" id="16_8pc7j"]
[ext_resource type="Texture2D" uid="uid://qmtf7ves3r8e" path="res://arms4.png" id="17_xw832"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_en25p"]
shader = ExtResource("1_ln5qv")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.455
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.021
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 4.715
shader_parameter/static_noise_intensity = 0.0
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.197

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yik1d"]
shader = ExtResource("2_mdce0")
shader_parameter/shake_power = 0.2
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.24

[sub_resource type="SpriteFrames" id="SpriteFrames_1vgth"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vac3q")
}, {
"duration": 1.0,
"texture": ExtResource("4_pdfnv")
}, {
"duration": 1.0,
"texture": ExtResource("5_bhxsg")
}, {
"duration": 1.0,
"texture": ExtResource("6_02v3h")
}, {
"duration": 1.0,
"texture": ExtResource("7_f7jwk")
}, {
"duration": 1.0,
"texture": ExtResource("8_3hmq7")
}, {
"duration": 1.0,
"texture": ExtResource("9_ryr52")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pdfnv")
}],
"loop": true,
"name": &"Parry",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6sfry"]
resource_name = "Glitch"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_clrit"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0ha7"]
_data = {
"Glitch": SubResource("Animation_6sfry"),
"RESET": SubResource("Animation_clrit")
}

[sub_resource type="Animation" id="Animation_msncw"]
resource_name = "Attack"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cevbg"]
resource_name = "Parry"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Parry"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.36602, 2.37841),
"update": 0,
"values": [Vector2(877, 740), Vector2(877, 173)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dwjxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Parry"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(742, 525)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqe83"]
_data = {
"Attack": SubResource("Animation_msncw"),
"Parry": SubResource("Animation_cevbg"),
"RESET": SubResource("Animation_dwjxg")
}

[sub_resource type="Animation" id="Animation_lxjf0"]
resource_name = "BlockFlash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qpyy0"]
length = 0.001

[sub_resource type="Animation" id="Animation_wygaq"]
resource_name = "AttackFlash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attackflash2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wtgf"]
_data = {
"AttackFlash": SubResource("Animation_wygaq"),
"BlockFlash": SubResource("Animation_lxjf0"),
"RESET": SubResource("Animation_qpyy0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kcp4y"]
shader = ExtResource("1_ln5qv")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.006
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.021
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 10.337
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.04
shader_parameter/noise_opacity = 0.073
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 5.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="BaseScreen" type="CanvasLayer" node_paths=PackedStringArray("screen_1", "screen_2", "sreen_3", "screen_4", "end", "effects")]
script = ExtResource("1_gnvie")
screen_1 = NodePath("Screen1")
screen_2 = NodePath("Screen2")
sreen_3 = NodePath("Sreen3")
screen_4 = NodePath("Screen4")
end = NodePath("Sreen3/End")
effects = NodePath("UiAndEffect/Effects")

[node name="UiAndEffect" type="CanvasLayer" parent="."]
layer = 2

[node name="flash" type="ColorRect" parent="UiAndEffect"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.182, 0.243967, 0.52, 0.419608)

[node name="Attackflash2" type="ColorRect" parent="UiAndEffect"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.00999999, 0.00999999, 0.419608)

[node name="ColorRect2" type="ColorRect" parent="UiAndEffect"]
visible = false
z_index = 1
material = SubResource("ShaderMaterial_en25p")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="UiAndEffect"]
visible = false
material = SubResource("ShaderMaterial_yik1d")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UiAndEffect"]
visible = false
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1129.0
offset_top = 583.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 100
text = "1"
fit_content = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UiAndEffect"]
visible = false
z_index = 1
position = Vector2(742, 525)
rotation = 0.261799
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_1vgth")
animation = &"Parry"
offset = Vector2(-56.205, 118.8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiAndEffect"]
libraries = {
"": SubResource("AnimationLibrary_b0ha7")
}

[node name="attack" type="AnimationPlayer" parent="UiAndEffect"]
libraries = {
"": SubResource("AnimationLibrary_kqe83")
}

[node name="Effects" type="AnimationPlayer" parent="UiAndEffect"]
libraries = {
"": SubResource("AnimationLibrary_4wtgf")
}

[node name="Player" type="Control" parent="." node_paths=PackedStringArray("animation_player", "attack", "animated_sprite_2d", "effects")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("2_tx5s3")
animation_player = NodePath("../UiAndEffect/AnimationPlayer")
attack = NodePath("../UiAndEffect/attack")
animated_sprite_2d = NodePath("../UiAndEffect/AnimatedSprite2D")
effects = NodePath("../UiAndEffect/Effects")

[node name="MonsterManeger" type="Control" parent="." node_paths=PackedStringArray("front", "middle", "end", "screen_1", "screen_2", "sreen_3", "screen_4")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_j0cqo")
front = NodePath("../Screen1/Front")
middle = NodePath("../Screen4/middle")
end = NodePath("../Sreen3/End")
screen_1 = NodePath("../Screen1")
screen_2 = NodePath("../Screen2")
sreen_3 = NodePath("../Sreen3")
screen_4 = NodePath("../Screen4")

[node name="Screen1" type="CanvasLayer" parent="." groups=["Screen"]]
visible = false

[node name="TextureRect" type="TextureRect" parent="Screen1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_awa1b")

[node name="ColorRect" type="ColorRect" parent="Screen1"]
z_index = 1
material = SubResource("ShaderMaterial_kcp4y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenShift" type="ColorRect" parent="Screen1"]
modulate = Color(0.972549, 0.972549, 0.972549, 0)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Front" type="TextureRect" parent="Screen1" node_paths=PackedStringArray("player", "timer", "attack_time", "ParryArea", "ArrayOfScreen", "base_screen", "end", "middle", "eye_1", "monster_maneger")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_t7q0d")
script = ExtResource("4_wi2lc")
player = NodePath("../../Player")
timer = NodePath("preAttack")
attack_time = NodePath("AttackTime")
ParryArea = NodePath("ParryedArea")
ArrayOfScreen = [NodePath(".."), NodePath("../../Screen2"), NodePath("../../Sreen3"), NodePath("../../Screen4")]
base_screen = NodePath("../..")
end = NodePath("../../Sreen3/End")
middle = NodePath("../../Screen4/middle")
ListOfMouths = Array[Texture2D]([ExtResource("6_t7q0d"), ExtResource("8_2ckfu"), ExtResource("9_2cjnu"), ExtResource("10_50alp"), ExtResource("11_00ta4")])
eye_1 = NodePath("eye1")
monster_maneger = NodePath("../../MonsterManeger")

[node name="preAttack" type="Timer" parent="Screen1/Front"]
wait_time = 2.0
one_shot = true

[node name="ParryTimer" type="Timer" parent="Screen1/Front"]
wait_time = 0.5
one_shot = true

[node name="AttackTime" type="Timer" parent="Screen1/Front"]
wait_time = 0.5
one_shot = true

[node name="parry" type="RichTextLabel" parent="Screen1/Front"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 154.0
offset_top = 111.0
offset_right = -639.0
offset_bottom = -359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.670588, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 86
bbcode_enabled = true
text = "[center][shake rate=100.0 level=100 qqconnected=1100]Parry[/shake]"

[node name="eye1" type="Area2D" parent="Screen1/Front"]
monitoring = false
monitorable = false

[node name="eye1" type="CollisionPolygon2D" parent="Screen1/Front/eye1"]
polygon = PackedVector2Array(459, 363, 407, 441, 470, 498, 675, 510, 846, 463, 905, 408, 912, 378, 869, 333, 844, 322, 705, 302, 635, 312, 559, 325)

[node name="ParryedArea" type="Area2D" parent="Screen1/Front"]

[node name="eye1" type="CollisionPolygon2D" parent="Screen1/Front/ParryedArea"]
polygon = PackedVector2Array(266, 172, 262, 365, 294, 597, 415, 653, 681, 661, 922, 654, 1038, 576, 1066, 156, 998, 100, 904, 67, 666, 57, 502, 51, 388, 83)

[node name="Screen2" type="CanvasLayer" parent="." groups=["Screen"]]

[node name="TextureRect" type="TextureRect" parent="Screen2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_awa1b")

[node name="ColorRect" type="ColorRect" parent="Screen2"]
z_index = 1
material = SubResource("ShaderMaterial_kcp4y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenShift" type="ColorRect" parent="Screen2"]
modulate = Color(0.972549, 0.972549, 0.972549, 0)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -3.0
offset_right = 2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Sreen3" type="CanvasLayer" parent="." groups=["Screen"]]
visible = false

[node name="TextureRect" type="TextureRect" parent="Sreen3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_awa1b")

[node name="ColorRect" type="ColorRect" parent="Sreen3"]
z_index = 1
material = SubResource("ShaderMaterial_kcp4y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenShift" type="ColorRect" parent="Sreen3"]
modulate = Color(0.972549, 0.972549, 0.972549, 0)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="End" type="TextureRect" parent="Sreen3" node_paths=PackedStringArray("ArrayOfScreen", "base_screen", "timer", "attack_time", "player", "ParryArea", "end", "middle", "eye_1", "monster_maneger")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("14_tvslc")
script = ExtResource("6_8pign")
ArrayOfScreen = [NodePath("../../Screen1"), NodePath("../../Screen2"), NodePath(".."), NodePath("../../Screen4")]
base_screen = NodePath("../..")
ListOfarms = Array[Texture2D]([ExtResource("14_tvslc"), ExtResource("15_q4t5l"), ExtResource("16_8pc7j"), ExtResource("12_pe6gb"), ExtResource("17_xw832")])
timer = NodePath("preAttack")
attack_time = NodePath("AttackTime")
player = NodePath("../../Player")
ParryArea = NodePath("ParryedArea")
end = NodePath(".")
middle = NodePath("../../Screen4/middle")
eye_1 = NodePath("eye1")
monster_maneger = NodePath("../../MonsterManeger")

[node name="eye1" type="Area2D" parent="Sreen3/End"]
monitoring = false
monitorable = false

[node name="eye1" type="CollisionPolygon2D" parent="Sreen3/End/eye1"]
polygon = PackedVector2Array(447, 539, 449, 458, 362, 417, 300, 521, 400, 577)

[node name="preAttack" type="Timer" parent="Sreen3/End"]
wait_time = 2.0
one_shot = true

[node name="ParryTimer" type="Timer" parent="Sreen3/End"]
wait_time = 0.5
one_shot = true

[node name="AttackTime" type="Timer" parent="Sreen3/End"]
wait_time = 0.5
one_shot = true

[node name="ParryedArea" type="Area2D" parent="Sreen3/End"]

[node name="eye1" type="CollisionPolygon2D" parent="Sreen3/End/ParryedArea"]
polygon = PackedVector2Array(-2, -4, 0, 721, 1283, 723, 1289, -1, 382, 2)

[node name="Screen4" type="CanvasLayer" parent="." groups=["Screen"]]
visible = false

[node name="TextureRect" type="TextureRect" parent="Screen4"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_awa1b")

[node name="ColorRect" type="ColorRect" parent="Screen4"]
z_index = 1
material = SubResource("ShaderMaterial_kcp4y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenShift" type="ColorRect" parent="Screen4"]
modulate = Color(0.972549, 0.972549, 0.972549, 0)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="middle" type="TextureRect" parent="Screen4" node_paths=PackedStringArray("base_screen", "monster_maneger", "player", "eye_1HurtBox", "eye_2HurtBox", "eye_3HurtBox", "eye_1_text", "eye_2_text", "eye_3_text", "ArrayOfScreen")]
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -0.560059
texture = ExtResource("4_awa1b")
script = ExtResource("5_y1adk")
base_screen = NodePath("../..")
monster_maneger = NodePath("../../MonsterManeger")
player = NodePath("../../Player")
eye_1HurtBox = NodePath("eye1")
eye_2HurtBox = NodePath("eye2")
eye_3HurtBox = NodePath("eye3")
eye_1_text = NodePath("eye1Text")
eye_2_text = NodePath("eye2Text")
eye_3_text = NodePath("eye3Text")
ArrayOfScreen = [NodePath("../../Screen1"), NodePath("../../Screen2"), NodePath("../../Sreen3"), NodePath("..")]

[node name="eye1Text" type="TextureRect" parent="Screen4/middle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_nbxwf")

[node name="eye2Text" type="TextureRect" parent="Screen4/middle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_sd7ph")

[node name="eye3Text" type="TextureRect" parent="Screen4/middle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_h2d60")

[node name="eye1" type="Area2D" parent="Screen4/middle"]

[node name="eye1" type="CollisionPolygon2D" parent="Screen4/middle/eye1"]
polygon = PackedVector2Array(358, 98, 272, 411, 349, 597, 408, 607, 457, 496, 459, 342, 447, 168, 447, 91, 412, 93)

[node name="eye2" type="Area2D" parent="Screen4/middle"]

[node name="eye2" type="CollisionPolygon2D" parent="Screen4/middle/eye2"]
position = Vector2(257, 14)
polygon = PackedVector2Array(329, 95, 280, 411, 335, 642, 372, 653, 408, 631, 486, 486, 489, 332, 464, 164, 425, 99, 366, 75)

[node name="eye3" type="Area2D" parent="Screen4/middle"]

[node name="eye3" type="CollisionPolygon2D" parent="Screen4/middle/eye3"]
position = Vector2(495, -7)
polygon = PackedVector2Array(289, 115, 321, 413, 341, 610, 386, 615, 457, 496, 449, 311, 374, 150, 327, 105)

[connection signal="TurnDone" from="." to="Screen1/Front" method="CountDownTicks"]
[connection signal="Turn" from="Player" to="." method="LookThroughScreenArrary"]
[connection signal="timeout" from="Screen1/Front/preAttack" to="Screen1/Front" method="_on_timer_timeout"]
[connection signal="timeout" from="Screen1/Front/AttackTime" to="Screen1/Front" method="_on_attack_time_timeout"]
[connection signal="input_event" from="Screen1/Front/eye1" to="Screen1/Front" method="_on_eye_1_input_event"]
[connection signal="input_event" from="Screen1/Front/ParryedArea" to="Screen1/Front" method="_on_parryed_area_input_event"]
[connection signal="gui_input" from="Sreen3/End" to="Sreen3/End" method="_on_gui_input"]
[connection signal="input_event" from="Sreen3/End/eye1" to="Sreen3/End" method="_on_eye_1_input_event"]
[connection signal="timeout" from="Sreen3/End/preAttack" to="Sreen3/End" method="_on_timer_timeout"]
[connection signal="timeout" from="Sreen3/End/AttackTime" to="Sreen3/End" method="_on_attack_time_timeout"]
[connection signal="input_event" from="Sreen3/End/ParryedArea" to="Sreen3/End" method="_on_parryed_area_input_event"]
[connection signal="input_event" from="Screen4/middle/eye1" to="Screen4/middle" method="_on_eye_1_input_event"]
[connection signal="input_event" from="Screen4/middle/eye2" to="Screen4/middle" method="_on_eye_2_input_event"]
[connection signal="input_event" from="Screen4/middle/eye3" to="Screen4/middle" method="_on_eye_3_input_event"]
